src/main/resources/tests/Semantics/bad/whileLoop2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
   variable2 : character;
begin
   variable2 := 'a';
   while variable2 <= 'z' loop -- Error: cannot compare character with string
      put(variable2);
      variable2 := variable2 + 1;
   end loop;
end TestLoops;
